Fix content hovering open menu on small screens

--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -37,7 +37,7 @@
       h1 {
         display: inline-block;
         position: relative;
-        z-index: 1;
+        z-index: 2;
         &:has(~ #menu button.open) {
           position: fixed;
         }
